# SmartCityConcept

./: README.md
capture/: CMakeLists.txt  httplib.h
capture/capture/: CMakeLists.txt  capture.cpp  capture.h
